--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<body>hi<!--subdomain takeover .  by   achilles13.  hackerone-->     <h1>1111111111<h1>                   <iframe height="260"
+<body>hi<!--subdomain takeover .  by   achilles13.  hackerone-->    
+  
+  
+  <a href = "http://fanyi.youdao.com/adsfsdgaga" target=”_blank” >aaaaaaaaaa链接:h内容便哦</a> 
+  <iframe height="260"
                                 allowTransparency="true"
                                 frameborder="0"
                                 scrolling="no"
